I put this as a placeholder to know if i wanted to change it (i started working on this page on December.)

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </main>
 
       <footer>
-        <p>© 2024 Unifier Team</p>
+        <p>© 2023-25 Unifier Team</p>
       </footer>
     </div>
     <script src="main.js"></script>
