--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
       <header>
         <h1>Unifier's Team</h1>
-        <p class="description">This is who creates and works on Unifier.</p>
+        <p class="description">This is who creates and works on Unifier. <a href="https://unifierhq.org">Main Site.</a></p>
       </header>
       
       <main id="team-members" class="team-grid">
